// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogHeader should render when buttons are provided 1`] = `
<div
  className="core-log-header"
>
  <div
    className="core-log-header-text"
  >
    Log
  </div>
  <div
    className="core-padded-row core-log-header-buttons"
  >
    <button
      className="btn btn-primary btn-sm core-btn "
      onClick={[Function]}
      title="Foo button"
      type="button"
    >
      <span
        aria-hidden="true"
        className="foo-btn-class"
      />
    </button>
    <button
      className="btn btn-primary btn-sm core-btn "
      onClick={[Function]}
      title="Bar button"
      type="button"
    >
      <span
        aria-hidden="true"
        className="bar-btn-class"
      />
    </button>
  </div>
</div>
`;

exports[`LogHeader should render when selected button is provided 1`] = `
<div
  className="core-log-header"
>
  <div
    className="core-log-header-text"
  >
    Log
  </div>
  <div
    className="core-padded-row core-log-header-buttons"
  >
    <button
      className="btn btn-primary btn-sm core-btn active"
      onClick={[Function]}
      title="Foo button"
      type="button"
    >
      <span
        aria-hidden="true"
        className="foo-btn-class"
      />
    </button>
  </div>
</div>
`;

exports[`LogHeader should render when text and no buttons provided 1`] = `
<div
  className="core-log-header"
>
  <div
    className="core-log-header-text"
  >
    Foobar log header
  </div>
  <div
    className="core-padded-row core-log-header-buttons"
  />
</div>
`;
